# WARNING: head commit changed in the meantime
엑셀다운로드 비밀번호 암호화

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   profiles:
     active: local
-  
+
 ---
-mybatis:
+mybatis: 
   mapper-locations: classpath:mapper/**/*.xml
   configuration:
     lazyLoadingEnabled: true
@@ -20,8 +20,8 @@ spring:
     async:
       request-timeout: 60000
   datasource:
-    driver-class-name: oracle.jdbc.driver.OracleDriver
-    url: jdbc:oracle:thin:@112.217.167.123:31521:orcl
+    driver-class-name: net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+    url: jdbc:log4jdbc:thin:@112.217.167.123:31521:orcl
     username: WATER
     password: WATER
 logging: 
@@ -35,7 +35,10 @@ logging:
     root: INFO
 server: 
   context-path: /krf
-  
+
+print: 
+  img: 
+     path: C:/arcgisserver/directories/arcgisoutput/customPrintTask/
 ---
 spring: 
   profiles: prod
@@ -60,5 +63,8 @@ logging:
     
 server: 
   context-path: /krf
-    
+  
+print: 
+  img: 
+     path: C:/arcgisserver/directories/arcgisoutput/customPrintTask/prod
 
