서버 시작시 SPRING BOOT logo삭제

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,9 @@
-spring:
-  profiles:
-    active: local
-
----
+spring: 
+    main: 
+        banner-mode: "off"
+    profiles:
+      active: local
+    
 mybatis: 
   mapper-locations: classpath:mapper/**/*.xml
   configuration:
