--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,10 @@ spring:
     profiles: 
       active: local
     
+server:
+  session:
+    timeout: 600 
+    
 mybatis: 
   mapper-locations: classpath:mapper/**/*.xml
   configuration:
