--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,10 +8,12 @@ server:
     
 mybatis: 
   mapper-locations: classpath:mapper/**/*.xml
-  configuration:
-    lazyLoadingEnabled: true
-    aggressiveLazyLoading: false
-    mapUnderscoreToCamelCase: true
+  configuration: 
+    map-underscore-to-camel-case: true
+    default-statement-timeout: 600
+    aggressive-lazy-loading: false
+    lazy-loading-enabled: true
+    
      
 logging:
   level:
