--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,12 +8,10 @@ server:
     
 mybatis: 
   mapper-locations: classpath:mapper/**/*.xml
-  configuration: 
-    map-underscore-to-camel-case: true
-    default-statement-timeout: 600
-    aggressive-lazy-loading: false
-    lazy-loading-enabled: true
-    
+  configuration:
+    lazyLoadingEnabled: true
+    aggressiveLazyLoading: false
+    mapUnderscoreToCamelCase: true
      
 logging:
   level:
