--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,9 +32,9 @@ spring:
   datasource: 
   #jndi-name: krf_db 
     driver-class-name: oracle.jdbc.driver.OracleDriver
-    url: jdbc:oracle:thin:@112.217.167.123:31521:orcl
-    username: WATER
-    password: WATER
+    url: jdbc:oracle:thin:@112.217.167.123:31720:STKDIV
+    username: WATER_2
+    password: WATER_2
     tomcat:
       max-idle: 30
       min-idle: 1
