--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -122,4 +122,38 @@ server:
 print: 
   img: 
      path: C:/arcgisserver/directories/arcgisoutput/customPrintTask/prod
+     
+---
+spring: 
+  profiles: prod-in-new
+  mvc:
+    view: 
+      prefix: /WEB-INF/jsp/
+      suffix: .jsp
+    async:
+      request-timeout: 60000
+  datasource:
+    driver-class-name: oracle.jdbc.driver.OracleDriver
+    url: jdbc:oracle:thin:@10.101.95.195:1521/WEIS2
+    username: water 
+    password: water123
+    tomcat:
+      max-idle: 30
+      min-idle: 1
+      test-while-idle: true
+      validation-query: select 1 from dual
+logging: 
+#  config: classpath:logback.xml
+  pattern: 
+    file: "%d %-5level [%thread] %logger{0} : %msg%n"
+  level: 
+    org.springframework.web: ERROR
+  file: logs/spring-boot-logging.log 
+    
+server: 
+  context-path: /krf
+  
+print: 
+  img: 
+     path: C:/arcgisserver/directories/arcgisoutput/customPrintTask/prod
 
