--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
 			<artifactId>poi</artifactId>
 			<version>3.15</version>
 		</dependency>
+		<dependency>
+   			<groupId>org.apache.poi</groupId>
+   			<artifactId>poi-ooxml</artifactId>
+   			<version>3.15</version>
+  		</dependency>
 		<!-- JSTL -->
 		<!-- <dependency> -->
 		<!-- <groupId>javax.servlet</groupId> -->
